# stenogotchi

./: BUILDNOTES.md  CHANGELOG.md  README.md  initial_setup.sh  requirements.txt  stenogotchi.py
.github/ISSUE_TEMPLATE/: bug_report.md
plover_plugin/: setup.cfg
plover_plugin/stenogotchi_link/: clients.py  com.github.stenogotchi.conf  keymap.py  stenogotchi_link.py  wpm.py
stenogotchi/: __init__.py  agent.py  automata.py  defaults.toml  log.py  utils.py  voice.py
stenogotchi/fs/: __init__.py
stenogotchi/plugins/: __init__.py  cmd.py
stenogotchi/plugins/default/: buttonshim.py  dict_lookup.py  evdevkb.py  example.py  led.py  logtail.py  memtemp.py  plover_link.py  plover_link_btserver_sdp_record.xml  upslite.py
stenogotchi/ui/: components.py  display.py  faces.py  fonts.py  view.py
stenogotchi/ui/hw/: __init__.py  base.py  waveshare2.py  waveshare3.py
stenogotchi/ui/hw/libs/waveshare/v2/: epd2in13_V2.py
stenogotchi/ui/hw/libs/waveshare/v3/: epd2in13_V3.py  epdconfig.py
stenogotchi/ui/web/: __init__.py  handler.py  server.py
stenogotchi/ui/web/static/css/: style.css
stenogotchi/ui/web/templates/: base.html  index.html
