[metadata]
name = stenogotchi_link
version = 0.0.7
description = A plugin for exposing Plover events and communicating with Stenogotchi over D-Bus
long_description = 
author = Anodynous
author_email = 
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/Anodynous/Stenogotchi
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
keywords = plover plover_plugin stenogotchi

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
    jsonpickle
    dbus-python
    textstat
    PyGObject
packages =
    stenogotchi_link

[options.entry_points]
plover.extension =
    stenogotchi_link = stenogotchi_link.stenogotchi_link:EngineServer